fixed overflow and image position, added brief intro

--- a/loading.css
+++ b/loading.css
@@ -4,7 +4,8 @@
     height: 100vh;
     display: flex;
     align-items: center;
-    justify-content: center
+    justify-content: center;
+    z-index: 100;
 
 }
 .lds-facebook {
@@ -18,7 +19,7 @@
     position: absolute;
     left: 8px;
     width: 16px;
-    background: black;
+    background: #333333;
     animation: lds-facebook 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
   }
   .lds-facebook div:nth-child(1) {
