--- a/style.css
+++ b/style.css
@@ -1,29 +1,24 @@
 body {
     margin: 0;
     font-family: monospace;
-  }
-  /*-----GRID------*/
-  .grid-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    overflow-x: hidden;
+    font-size: 14pt;
   }
 
-  .grid-content{
-    display: grid;
-  }
 
 
   /*---- NAVBAR -------*/
-  .navbar {
+  .m_navbar {
     overflow: hidden;
     background-color: rgb(205, 226, 15);
     color: black;
     position: fixed;
     bottom: 0;
     width: 100%;
+    z-index: 2;
   }
   
-  .navbar a {
+  .m_navbar a {
     float: left;
     display: block;
     color: black;
@@ -33,46 +28,53 @@ body {
     font-size: 17px;
   }
   
-  .navbar a:hover {
+  .m_navbar a:hover {
     background: #d4d1d1;
     color: black;
   }
   
-  .navbar a.active {
+  .m_navbar a.active {
     background-color:  #333;
     color: whitesmoke;
   }
 
-  .navbar .icon {
+  .m_navbar .icon {
     display: none;
   }  
 
 
   @media screen and (max-width: 600px) {
-    .navbar a:not(:first-child) {display: none;}
-    .navbar a.icon {
+    .m_navbar a:not(:first-child) {display: none;}
+    .m_navbar a.icon {
       float: right;
       display: block;
     }
   }
   
   @media screen and (max-width: 600px) {
-    .navbar.responsive .icon {
+    .m_navbar.responsive .icon {
       position: absolute;
       right: 0;
       bottom:0;
     }
-    .navbar.responsive a {
+    .m_navbar.responsive a {
       float: none;
       display: block;
       text-align: left;
     }
-  
   }
   
+  /*---- NAVBAR -------*/
+
   .main {
     display:none;
     margin-bottom: 30px;
+  }
+
+  
+
+  .m_container{
+    width: 90% !important;
   }
 
   /*Content*/
@@ -90,46 +92,85 @@ body {
   }
 
   .profile_pic{
-    display: flex;
+    position: absolute;
+    width: auto;
+    height: 100vh;
     margin-right: 0;
-    grid-column: 4/-1;
-    grid-row: 1/4;
-    min-width: 100%;
-    max-width: 100%;
-    height: auto;
+    margin-left: 45%;
+    z-index: -1;
   }
 
+  .brief_presentation{
+    font-size: 16pt;
+    color: gainsboro;
+    background-color: #333333;
+  }
   .role_text {
     grid-column: 1;
     grid-row: 2;
     font-size: 4vw;
   }
 
+  .m_text_animation{
+    animation-name: m_text_animation;
+    animation-duration: 1s;
+    animation-delay: 0s;
+  }
+
+  @keyframes m_text_animation {
+    0%   {left:-100%}
+    100% {left:0%}
+  }
+
+  .m_pic_animation{
+    animation-name: m_pic_animation;
+    animation-duration: 1s;
+    animation-delay: 0s;
+  }
+
+  @keyframes m_pic_animation {
+    0%   {top:-100%}
+    100% {top:0%}
+  }
+
+  .m_navbar_animation{
+    animation-name: m_nav_animation;
+    animation-duration: 1s;
+    animation-delay: 0s;
+  }
+
+  @keyframes m_nav_animation {
+    0%   {bottom:-100%}
+    100% {bottom:0%}
+  }
+
   @media screen and (max-width: 600px) {
     
+    .m_container{
+      width: 100% !important;
+    }
     .title_text {
-      font-size: 10vw;
-      grid-column: 1 / 3;
-      grid-row: 1;
+      margin-top: 40%;
+      font-size: 30pt;
       font-weight: bold;
       font-family: monospace;
     }
-    
     .profile_pic{
-      margin-right: 0;
-      grid-column: 1/-1;
-      grid-row: 1/-1;
-      min-width: 50%;
-      max-width: 100%;
-      height: auto;
+      overflow-x: hidden;
       overflow: hidden;
-      display: grid;
+      position: absolute;
+      height: 100%;
+      margin-left: 30%;
       z-index: -1;
+      object-fit: cover;
     }
     .role_text {
-      grid-column: 1;
-      grid-row: 2;
-      font-size: 10pt;
+      font-size: 20pt;
+    }
+    .brief_presentation{
+      font-size: 12pt;
+      color: gainsboro;
+      background-color: #333333;
     }
     
   }
